--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <groupId>com.shopzilla.site.service.http.wadl</groupId>
   <artifactId>wadl-doc</artifactId>
   <packaging>jar</packaging>
-  <version>1.1</version>
+  <version>1.2-SNAPSHOT</version>
   <prerequisites>
     <maven>2.0.9</maven>
   </prerequisites>
