--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.shopzilla.site.service.http.wadl</groupId>
-  <artifactId>wadl-doc</artifactId>
+  <groupId>com.shopzilla.ducky</groupId>
+  <artifactId>ducky</artifactId>
   <packaging>jar</packaging>
-  <version>1.2-SNAPSHOT</version>
+  <version>1.0-SNAPSHOT</version>
   <prerequisites>
     <maven>2.0.9</maven>
   </prerequisites>
-  <name>wadl-doc</name>
+  <name>ducky</name>
   <url>http://maven.apache.org</url>
     <scm>
       <developerConnection>scm:git:git://git.shopzilla.com/site/sharedweb/wadl-doc</developerConnection>
@@ -82,7 +82,7 @@
           <format>xml</format>
         </formats>
         <check>
-          <!-- 90% is the standard for Site 2.0 services -->
+          <!-- 90% is the standard -->
           <lineRate>90</lineRate>
           <branchRate>90</branchRate>
         </check>
@@ -133,10 +133,5 @@
       <name>jvlinux snapshop repository</name>
       <url>scp://jvlinux.shopzilla.com/maven2/snapshot</url>
     </snapshotRepository>
-    <!--<site>-->
-      <!--<id>opensource.shopzilla.com</id>-->
-      <!--<name>WADL Doc</name>-->
-      <!--<url>scp://opensource.shopzilla.com/site/wadl-doc</url>-->
-    <!--</site>-->
   </distributionManagement>
 </project>
