--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <groupId>com.shopzilla.ducky</groupId>
   <artifactId>ducky</artifactId>
   <packaging>jar</packaging>
-  <version>1.0</version>
+  <version>1.1-SNAPSHOT</version>
   <prerequisites>
     <maven>2.0.9</maven>
   </prerequisites>
